name:                h4h-bot
version:             0.1.0.0
synopsis:            Telegram bot for @house4hack
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Mikkel Christiansen
maintainer:          mikkels@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       aeson
                     , base >=4.8 && <4.9
                     , bytestring
                     , http-client
                     , http-client-tls
                     , text
  exposed-modules:     Bot.Config
                     , Bot.Methods
                     , Bot.Types
  ghc-options:         -Wall


executable h4h-bot
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , h4h-bot
  hs-source-dirs:      .
  default-language:    Haskell2010
