name:                h4h-bot
version:             0.1.0.0
synopsis:            Telegram bot for @house4hack
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Mikkel Christiansen
maintainer:          mikkels@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base
                     , bytestring
                     , configurator
                     , http-client
                     , http-client-tls
                     , json
                     , text
                     , time
  exposed-modules:     Bot.Config
                     , Bot.Methods
                     , Bot.Types
                     , Bot.Commands
  ghc-options:         -Wall
  extensions:          CPP


executable h4h-bot
  main-is:             Main.hs
  build-depends:       base
                     , h4h-bot
  hs-source-dirs:      .
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  ghc-options:         -Wall
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , h4h-bot
                     , hspec
                     , json
  default-language:    Haskell2010
  ghc-options:         -Wall

Source-Repository head
  Type:                git
  Location:            https://github.com/house4hack/h4h-bot
